# DiskVecLab

./: .gitignore  .gitmodules  LICENSE  README.md
data/: README.md
src/DiskAnn/: .gitignore  CMakeLists.txt
src/DiskAnn/apps/: CMakeLists.txt  build_disk_index.cpp  range_search_disk_index.cpp  search_disk_index.cpp  search_multi_shard_index.cpp
src/DiskAnn/include/: defaults.h  disk_utils.h  fixed_chunk_pq_table_adapter.h  full_precision_quantizer.h  llocal_search_quantizer.h  multi_shard_search.h  neighbor.h  percentile_stats.h  pq.h  pq_factory.h  pq_flash_index.h  pq_table_base.h  program_options_utils.hpp  rabitq_quantizer.h  search_state.h
src/DiskAnn/include/rabitqlib/utils/: fht_avx.hpp  rotator.hpp
src/DiskAnn/scripts/: run_multi_shard.sh
src/DiskAnn/src/: CMakeLists.txt  disk_utils.cpp  fixed_chunk_pq_table_adapter.cpp  full_precision_quantizer.cpp  llocal_search_quantizer.cpp  pq.cpp  pq_flash_index.cpp  rabit_quantizer.cpp  utils.cpp
src/ELPIS/: .gitignore
src/ELPIS/code/: main.cpp  release.sh
src/ELPIS/code/include/: QueryEngine.h  Setting.h
src/ELPIS/code/src/: Node.cpp  QueryEngine.cpp
src/Gorgeous/: build.sh  build_split.sh
src/Gorgeous/graph_partition/: oneTBB
src/Gorgeous/scripts/: auto_generate_config_and_run.sh  config_dataset.sh  config_local.sh  run_benchmark.sh  run_benchmark_multi_split.sh  sift_example.sh
src/Gorgeous/src/gorgeous/: index_search.cpp  index_search_dup_graph.cpp
src/Gorgeous/src/starling/: page_search.cpp
src/Gorgeous/tests/: CMakeLists.txt  search_disk_index_multi_split.cpp
src/Gorgeous/tests/utils/: index_relayout_free_mem.cpp
src/MARGO/: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_split.sh  graph_partition
src/MARGO/include/: aux_utils.h  index.h  myindex.h  percentile_stats.h
src/MARGO/my_gp/: CMakeLists.txt  mcrun.sh  new_mincut.cpp
src/MARGO/my_gp/include/: mincut.h
src/MARGO/scripts/: auto_generate_config_and_run.sh  config_dataset.sh  config_local.sh  run_benchmark.sh  run_benchmark_multi_split.sh
src/MARGO/src/: CMakeLists.txt  aux_utils.cpp  myindex.cpp  pq_flash_index.cpp
src/MARGO/tests/: CMakeLists.txt  my_build_disk_index.cpp  search_disk_index.cpp  search_disk_index_multi_split.cpp  search_disk_index_save_freq.cpp
src/SPANN-ext/: .gitignore  CMakeLists.txt  build_with_asan.sh  config.ini  run_asan_full_check.sh
src/SPANN-ext/AnnService/: CMakeLists.txt
src/SPANN-ext/AnnService/inc/Core/: DefinitionList.h  VectorIndex.h
src/SPANN-ext/AnnService/inc/Core/BKT/: Index.h
src/SPANN-ext/AnnService/inc/Core/Common/: BKTree.h  DistanceUtils.h  FlatQuantizer.h  IQuantizer.h  LSQQuantizer.h  NeighborhoodGraph.h  PQQuantizer.h  QueryResultSet.h  RaBitQQuantizer.h  TruthSet.h
src/SPANN-ext/AnnService/inc/Core/SPANN/: ExtraFullGraphSearcher.h  IExtraSearcher.h  Options.h  ParameterDefinitionList.h
src/SPANN-ext/AnnService/inc/Quantizer/: Training.h
src/SPANN-ext/AnnService/inc/SSDServing/: SSDIndex.h  SelectHead.h
src/SPANN-ext/AnnService/src/Core/: VectorIndex.cpp
src/SPANN-ext/AnnService/src/Core/BKT/: BKTIndex.cpp
src/SPANN-ext/AnnService/src/Core/Common/: FlatQuantizer.cpp  IQuantizer.cpp  LSQQuantizer.cpp  RaBitQQuantizer.cpp
src/SPANN-ext/AnnService/src/Core/SPANN/: SPANNIndex.cpp
src/SPANN-ext/AnnService/src/Helper/VectorSetReaders/: DefaultReader.cpp  XvecReader.cpp
src/SPANN-ext/AnnService/src/Quantizer/: main.cpp
src/SPANN-ext/AnnService/src/SSDServing/: main.cpp
src/starling/: CMakeLists.txt
src/starling/include/: data_partition.h  fixed_chunk_pq_table_adapter.h  llocal_search_quantizer.h  multi_shard_search.h  partition_and_pq.h  percentile_stats.h  pq_factory.h  pq_flash_index.h  pq_table.h  pq_table_base.h  rabitq_quantizer.h  search_state.h  utils.h
src/starling/include/elpis/: Index.h  QueryEngine.h
src/starling/scripts/: auto_generate_config_and_run.sh  config_dataset.sh  run_benchmark.sh
src/starling/src/: CMakeLists.txt  aux_utils.cpp  data_partition.cpp  fixed_chunk_pq_table_adapter.cpp  llocal_search_quantizer.cpp  page_search.cpp  partition_and_pq.cpp  pq_flash_index.cpp  rabit_quantizer.cpp  range_search.cpp
src/starling/src/elpis/: CMakeLists.txt  Index.cpp  QueryEngine.cpp  Setting.cpp
src/starling/tests/: CMakeLists.txt  range_search_disk_index.cpp  search_disk_index.cpp  search_disk_index_adaptive_multi_shard.cpp  search_disk_index_multi_split.cpp  search_disk_index_save_freq.cpp
src/starling/tests/utils/: CMakeLists.txt  compute_groundtruth.cpp  run_data_partition.cpp  run_inspect_bin.cpp  run_merge_results.cpp
test/: search_segments.py
tools/python/: bin_to_bin.py  bin_to_vecs.py  bvecs_to_fvecs.py  compute_groud_truth.py  fbin_to_fbins.py  fvecs_to_fbin_opt.py  generate_ids.py  inspect_data.py  inspect_int64_data.py  utils.py  vecs_to_bin.py  vecs_to_pure.py
